--- a/notebooks/b_coding/NumPy_Arrays.ipynb
+++ b/notebooks/b_coding/NumPy_Arrays.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-progr"
+    ]
+   },
    "source": [
     "# NumPy arrays\n",
     "```{index}\n",
@@ -376,6 +380,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -391,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
