--- a/notebooks/d_geosciences/Seismology.ipynb
+++ b/notebooks/d_geosciences/Seismology.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "module-seism"
+     "module-seism",
+     "module-igp"
     ]
    },
    "source": [
@@ -503,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
