--- a/notebooks/d_geosciences/Wave_dispersion.ipynb
+++ b/notebooks/d_geosciences/Wave_dispersion.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-pope"
+    ]
+   },
    "source": [
     "# Wave dispersion\n",
     "``` {index} Wave dispersion\n",
@@ -7555,7 +7559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
