--- a/notebooks/d_geosciences/Dynamic_Earth.ipynb
+++ b/notebooks/d_geosciences/Dynamic_Earth.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "module-dynep"
+     "module-dynep",
+     "module-toto"
     ]
    },
    "source": [
@@ -809,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
