Completed review of the mechanics

--- a/notebooks/a_modules/mechanics/2_Motion_in_2D.ipynb
+++ b/notebooks/a_modules/mechanics/2_Motion_in_2D.ipynb
@@ -4,17 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Motion in 2D\n",
-    "\n",
-    "```{index}Motion in 2D"
+    "(motion_in_2d)=\n",
+    "# Motion in 2D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
-     "hide-input"
+     "remove-output"
     ]
    },
    "outputs": [],
@@ -61,11 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def total_time(a, v0, g=9.81): # obtain total time of flight\n",
@@ -118,7 +113,7 @@
    "execution_count": 17,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -136,6 +131,7 @@
     }
    ],
    "source": [
+    "# making the animation\n",
     "nframes = len(X1)\n",
     "\n",
     "# plot background axes\n",
@@ -172,11 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -972,7 +964,7 @@
    "execution_count": 20,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -990,6 +982,7 @@
     }
    ],
    "source": [
+    "# animation again\n",
     "nframes = len(X2)\n",
     "\n",
     "# plot background axes\n",
@@ -1026,11 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1594,11 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1747,11 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1844,7 +1825,7 @@
    "execution_count": 38,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -1933,10 +1914,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "scrolled": true,
-    "tags": [
-     "hide-input"
-    ]
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2472,7 +2450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
