--- a/notebooks/a_modules/mechanics/3_Work_and_Energy.ipynb
+++ b/notebooks/a_modules/mechanics/3_Work_and_Energy.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Work and Energy \n",
-    "\n",
-    "```{index}Work and Energy"
+    "(work_and_energy)=\n",
+    "# Work and Energy "
    ]
   },
   {
@@ -14,7 +13,7 @@
    "execution_count": 2,
    "metadata": {
     "tags": [
-     "hide-input"
+     "remove-output"
     ]
    },
    "outputs": [],
@@ -73,7 +72,7 @@
    "source": [
     "## Tutorial Problem 3.6\n",
     "\n",
-    "Consider a body connected to a spring, oscillating according to $x(t)=x_0cos(\\sqrt{\\frac{k}{m}}t$. Derive expressions for the elastic potential energy of the body as a function of time, for the kinetic energy of the body as a function of time, and for the total energy of the body as a function of time. Draw a simple sketch of these energies as a function of time. What is the average value of KE, and the average value of EPE, over one period? You should find that the average values of KE and EPE are equal."
+    "Consider a body connected to a spring, oscillating according to $x(t)=x_0cos(\\sqrt{\\frac{k}{m}}t)$. Derive expressions for the elastic potential energy of the body as a function of time, for the kinetic energy of the body as a function of time, and for the total energy of the body as a function of time. Draw a simple sketch of these energies as a function of time. What is the average value of KE, and the average value of EPE, over one period? You should find that the average values of KE and EPE are equal."
    ]
   },
   {
@@ -168,7 +167,7 @@
    "execution_count": 40,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -222,10 +221,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "scrolled": true,
-    "tags": [
-     "hide-input"
-    ]
+    "scrolled": true
    },
    "outputs": [
     {
@@ -682,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
