--- a/notebooks/a_modules/mechanics/4_Rotational_Motion.ipynb
+++ b/notebooks/a_modules/mechanics/4_Rotational_Motion.ipynb
@@ -4,26 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rotational Motion\n",
+    "(rotational_motion)=\n",
     "\n",
-    "```{index}Rotational Motion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation, rc\n",
-    "from IPython.display import HTML"
+    "# Rotational Motion\n"
    ]
   },
   {
@@ -109,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +105,11 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation, rc\n",
+    "from IPython.display import HTML\n",
     "from sympy import Symbol, integrate\n",
     "\n",
     "F = Symbol('F') # force\n",
@@ -219,8 +207,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "scrolled": true,
     "tags": [
-     "hide-cell"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -291,9 +280,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "tags": [
-     "hide-input"
-    ]
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1168,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
